--- a/projekti ne grup/about.css
+++ b/projekti ne grup/about.css
@@ -1,4 +1,6 @@
-* {
+ 50% { box-shadow: 0 0 20px #ff0000; }
+  100% { box-shadow: 0 0 10px #ff8c00; }
+}* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -101,17 +103,11 @@ h1 {
   position: relative;
   overflow: hidden;
 }
+.car:hover { transform: translateY(-10px) scale(1.05); }
 
-.car:hover {
-  transform: translateY(-10px) scale(1.05);
-  box-shadow: 0 0 25px rgba(255, 255, 255, 0.6);
-  animation: glow 1s infinite alternate;
-}
-
-.car h2 {
-  font-family: 'Orbitron', sans-serif;
-  color: #ff8c00;
-}
+.car h2{
+     font-family: 'Orbitron', sans-serif;
+     color: #ff8c00; }
 
 .condition {
   font-weight: bold;
@@ -149,8 +145,5 @@ footer {
   color: #aaa;
 }
 
-@keyframes glow {
-  0% { box-shadow: 0 0 10px #ff8c00; }
-  50% { box-shadow: 0 0 20px #ff0000; }
-  100% { box-shadow: 0 0 10px #ff8c00; }
-}
+
+ 
