--- a/projekti ne grup/home.css
+++ b/projekti ne grup/home.css
@@ -4,11 +4,23 @@
     box-sizing: border-box;
 }
 
+        
+
+      
+        .card-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 1rem;
+            margin-top: 20px;
+        }
 body {
     background: linear-gradient(to left, white, lightgray);
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+      direction: rtl; 
+    text-align: right;
 }
 
 .navbar {
@@ -22,15 +34,19 @@ body {
 
 .navbar ul {
     list-style-type: none;
-    padding: 0;
-    margin: 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-}
+      list-style: none;
+     display: flex;
+    justify-content: flex-end;
+    background-color: #333;
+    padding: 10px;
+     margin: 0;
+ }
 
 .navbar ul li {
-    margin: 5px 10px;
+ margin-left: 20px;
 }
 
 .navbar ul li a {
