--- a/projekti ne grup/home.css
+++ b/projekti ne grup/home.css
@@ -3,33 +3,30 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-        
-
-      
-        .card-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 1rem;
-            margin-top: 20px;
-        }
+ .card-container {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   gap: 1rem;
+   margin-top: 20px;
+ }
 body {
     background: linear-gradient(to left, white, lightgray);
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-      direction: rtl; 
+    direction: ltr; 
     text-align: right;
 }
 
 .main-navbar {
     background-color:  #5e5151;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     padding: 10px 20px;
     width: 100%;
+    height: 100px;
 }
 
 .main-navbar ul {
@@ -40,7 +37,6 @@ body {
       list-style: none;
      display: flex;
     justify-content: flex-end;
-    background-color: #333;
     padding: 10px;
      margin: 0;
  }
@@ -81,7 +77,7 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 20px;
+  padding: 15px;
 }
 
 .car {
@@ -89,7 +85,7 @@ h1 {
   border: 2px solid #444;
   border-radius: 10px;
   width: 250px;
-  margin: 15px;
+  margin: 10px;
   padding: 20px;
   transition: transform 0.3s, box-shadow 0.3s;
 }
@@ -107,3 +103,26 @@ h1 {
   font-weight: bold;
   margin-top: 10px;
 }
+#search{
+  margin: 5px;
+}
+footer {
+    background-color: #5e5151;
+    color: white;
+    text-align: center;
+    padding: 20px 10px;
+    font-size: 14px;
+    margin-top: 40px;
+  }
+  .card{
+    padding :10px;
+  }
+  #logo{
+    height: 150px;
+    width: 200px;
+    padding-left: 25px;
+    padding-right: 45px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    
+  }
