--- a/projekti ne grup/home.css
+++ b/projekti ne grup/home.css
@@ -83,7 +83,34 @@ body {
     font-size: 14px;
     margin-top: 40px;
 }
-.carousel-item{
+   .frame {
+        background: white;
+        width: 260px;
+        padding: 15px;
+        border-radius: 15px;
+        box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+        text-align: center;
+    }
+
+    .frame img {
+        width: 100%;
+        border-radius: 12px;
+        border: 4px solid #ddd;
+    }
+
+    .badge {
+        margin-top: 12px;
+        background: #FFD700;
+        padding: 8px 12px;
+        border-radius: 20px;
+        font-weight: bold;
+        display: inline-block;
+        font-size: 16px;
+        color: #000;
+        box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+    }
+
+    .carousel-item{
     width: 1600px;
     height: 1150px;
 }
