--- a/projekti ne grup/home.css
+++ b/projekti ne grup/home.css
@@ -83,20 +83,28 @@ body {
     font-size: 14px;
     margin-top: 40px;
 }
-   .frame {
-        background: white;
-        width: 260px;
-        padding: 15px;
-        border-radius: 15px;
-        box-shadow: 0 4px 15px rgba(0,0,0,0.15);
-        text-align: center;
-    }
+  .frames-row {
+    display: flex;
+    gap: 20px;         /* spacing between the frames */
+    justify-content: center; /* centers them horizontally */
+    align-items: flex-start;
+}
 
-    .frame img {
-        width: 100%;
-        border-radius: 12px;
-        border: 4px solid #ddd;
-    }
+.frame {
+    background: white;
+    width: 260px;
+    padding: 15px;
+    border-radius: 15px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+    text-align: center;
+}
+
+.frame img {
+    width: 100%;
+    border-radius: 12px;
+    border: 4px solid #ddd;
+}
+
 
     .badge {
         margin-top: 12px;
