--- a/projekti ne grup/home.css
+++ b/projekti ne grup/home.css
@@ -11,12 +11,14 @@
    margin-top: 20px;
  }
 body {
-    background: linear-gradient(to left, white, lightgray);
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     direction: ltr; 
-    text-align: right;
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #121212;
+    color: #ffffff;
+    text-align: center;
 }
 
 .main-navbar {
@@ -58,14 +60,6 @@ body {
     background-color: #575757;
 }
 
-body {
-  font-family: 'Segoe UI', sans-serif;
-  background: #121212;
-  color: #fff;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-}
 #logo{
     height: 150px;
     width: 200px;
@@ -84,14 +78,15 @@ body {
     margin-top: 40px;
 }
   .frames-row {
+    margin-top: 65px;
     display: flex;
-    gap: 20px;         /* spacing between the frames */
-    justify-content: center; /* centers them horizontally */
+    gap: 20px;  
+    justify-content: center; 
     align-items: flex-start;
 }
 
 .frame {
-    background: white;
+    background: rgb(255, 0, 0);
     width: 260px;
     padding: 15px;
     border-radius: 15px;
@@ -108,7 +103,7 @@ body {
 
     .badge {
         margin-top: 12px;
-        background: #FFD700;
+        background: #0c0000;
         padding: 8px 12px;
         border-radius: 20px;
         font-weight: bold;
@@ -121,4 +116,9 @@ body {
     .carousel-item{
     width: 1600px;
     height: 1150px;
+    }
+#carouselExample{
+    margin-top: 80px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
