--- a/projekti ne grup/home.css
+++ b/projekti ne grup/home.css
@@ -16,7 +16,7 @@ body {
     padding: 0;
     direction: ltr; 
     font-family: 'Segoe UI', sans-serif;
-    background-color: #121212;
+    background-color: #5e5151;
     color: #ffffff;
     text-align: center;
 }
@@ -77,7 +77,7 @@ body {
     font-size: 14px;
     margin-top: 40px;
 }
-  .frames-row {
+.frames-row {
     margin-top: 65px;
     display: flex;
     gap: 20px;  
@@ -86,7 +86,7 @@ body {
 }
 
 .frame {
-    background: rgb(255, 0, 0);
+    background:  #5e5151;
     width: 260px;
     padding: 15px;
     border-radius: 15px;
@@ -101,24 +101,24 @@ body {
 }
 
 
-    .badge {
-        margin-top: 12px;
-        background: #0c0000;
-        padding: 8px 12px;
-        border-radius: 20px;
-        font-weight: bold;
-        display: inline-block;
-        font-size: 16px;
-        color: #000;
-        box-shadow: 0 3px 8px rgba(0,0,0,0.2);
-    }
+.badge {
+    margin-top: 12px;
+    background: #b9ad02;
+    padding: 8px 12px;
+    border-radius: 20px;
+    font-weight: bold;
+    display: inline-block;
+    font-size: 16px;
+    color: #fffefe;
+    box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+}
 
-    .carousel-item{
+.carousel-item{
     width: 1600px;
     height: 1150px;
-    }
+}
 #carouselExample{
-    margin-top: 80px;
+    margin-top: 40px;
     margin-left: 30px;
     margin-right: 30px;
 }
